--- a/themes/mythical_labyrinth_escape/templates/puzzle1.html
+++ b/themes/mythical_labyrinth_escape/templates/puzzle1.html
@@ -19,7 +19,7 @@
     <!--
         add hint alert every 15 minutes;
         add story;
-        add question 4 digit code same pattern 4-8-16-32;
+        add question 4 digit code same pattern? 4-8-16;
     -->
 </body>
 </html>
