Glow Buttons Added Again

--- a/virtual_escape_room_app/templates/landing.html
+++ b/virtual_escape_room_app/templates/landing.html
@@ -53,7 +53,7 @@
                             </div>
 
                             <!-- Register Pop Up -->
-                            <a id="register" class="myModal bg-glow nav-item nav-link">Register</a>
+                            <a id="register" class="myModal bg-glow nav-item nav-link">Create</a>
                             <div id="registerModal" class="modal col-md-10">
                                 <div class="modal-content col-md-6">
                                     <div class="modal-header text-center col-md-12">
