--- a/themes/mythical_labyrinth_escape/templates/puzzle3.html
+++ b/themes/mythical_labyrinth_escape/templates/puzzle3.html
@@ -6,19 +6,18 @@
     <title>Puzzle #3</title>
 </head>
 <body>
-    <div class="wrapper">
-
+        
+        <h5>{{ this_puzzle.story }}</h5>
+        
+        <h5>{{ this_puzzle.question }}</h5>
         <img src="static/images/3Gnomes.png" alt="3 gnomes riddle">
 
-        <h5>{{ this_puzzle.question }}</h5>
-
         <form action="/puzzle/{{this_puzzle.id}}/answer" method="POST">
-            <p>H_ _ _ &nbsp;  _ _ &nbsp; _ _ _ _, &nbsp; _ _ _ &nbsp; _o &nbsp; _ _ _ _, &nbsp; _ _ _ _ _ &nbsp; _ _ &nbsp; _ _ _l.</p>
+            <p>H_ _ _ &nbsp;  _ _ &nbsp; e _ _ _, &nbsp; _ _ _ &nbsp; _o &nbsp; _ v _ _, &nbsp; S _ _ _ _ &nbsp; _ _ &nbsp; _ _ _l.</p>
             <input type="text" id="answer" name="answer">
             <input type="submit" value="Solve Riddle">
         </form>
 
-    </div>
     
 </body>
 </html>
