--- a/themes/mythical_labyrinth_escape/templates/success_puzzle1.html
+++ b/themes/mythical_labyrinth_escape/templates/success_puzzle1.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h2>You have successfully solved the puzzle! Click the link below to move on to the next level!</h2>
-    <a href="#">Attempt Puzzle Two</a>
+    <a href="success_puzzle_1/{{puzzle.id}}">Attempt Puzzle Two</a>
 </body>
 </html>
