--- a/Themes/mythical_labrynth_escape/templates/puzzle1.html
+++ b/Themes/mythical_labrynth_escape/templates/puzzle1.html
@@ -43,18 +43,18 @@
     </div>
     <!-- Middle Content-->
     <div class="caption text-center">
-                <div class="col-sm-4 row" style="margin-top:-200px; display:inline-block;">
+                <div class="col-sm-4 row" style="display:inline-block;">
                     <div id="left" class="bg-light text-center text-dark ml-2 mb-2" style="height:100px; width:100%; display:inline-block;">
                         <div>Hint</div>
                     </div>
-                    <div id="left" class="col-sm-12 bg-light text-center text-dark ml-2 mb-2" style="height:300px; display:inline-block;">
+                    <div id="left" class="col-sm-12 bg-light text-center text-dark ml-2 mb-2" style="height:300px; width:100%; display:inline-block;">
                         <div>Story</div>
                     </div>
-                    <div id="left" class="col-sm-12 bg-light text-center text-dark ml-2 mb-2" style="height:150px; display:inline-block;">
+                    <div id="left" class="col-sm-12 bg-light text-center text-dark ml-2 mb-2" style="height:150px; width:100%; display:inline-block;">
                         <div>Inventory</div>
                     </div>
                 </div>
-                <div style="display:inline-block; vertical-align:top; margin-top:-200px;">
+                <div style="display:inline-block; vertical-align:top;">
                     <div class="d-inline-block bg-light text-dark ml-2" style="height:550px; width:600px;">Puzzle</div>
                 </div>
     </div>
