--- a/Themes/mythical_labrynth_escape/templates/puzzle1.html
+++ b/Themes/mythical_labrynth_escape/templates/puzzle1.html
@@ -43,7 +43,7 @@
     </div>
     <!-- Middle Content-->
     <div class="caption text-center">
-                <div class="col-sm-4 row" style="display:inline-block;">
+                <div class="col-sm-3 row" style="display:inline-block;">
                     <div id="left" class="bg-light text-center text-dark ml-2 mb-2" style="height:100px; width:100%; display:inline-block;">
                         <div>Hint</div>
                     </div>
@@ -54,8 +54,12 @@
                         <div>Inventory</div>
                     </div>
                 </div>
-                <div style="display:inline-block; vertical-align:top;">
-                    <div class="d-inline-block bg-light text-dark ml-2" style="height:550px; width:600px;">Puzzle</div>
+                <div class="col-sm-8 row" style="display:inline-block; vertical-align:top;">
+                    <div class="col-sm-12 d-inline-block bg-light text-dark ml-2 mb-2" style="height:400px;">Puzzle</div>
+                    <div class="col-sm-12 bg-light text-dark ml-2 mb-2" style="height:150px;">
+                        <div class="col-sm-4 d-inline-block bg-light text-dark ml-2 mb-2">Questions</div>
+                        <div class="col-sm-4 d-inline-block bg-light text-dark ml-2 mb-2">Answers</div>
+                    </div>
                 </div>
     </div>
     
