--- a/Themes/mythical_labrynth_escape/templates/puzzle1.html
+++ b/Themes/mythical_labrynth_escape/templates/puzzle1.html
@@ -44,25 +44,24 @@
     <!-- Middle Content-->
     <div class="caption text-center">
                 <div class="col-sm-3 row" style="display:inline-block;">
-                    <div id="left" class="bg-light text-center text-dark ml-2 mb-2" style="height:100px; width:100%; display:inline-block;">
+                    <div id="left" class="bg-light text-center text-dark ml-2" style="height:100px; width:100%; display:inline-block;">
                         <div>Hint</div>
                     </div>
-                    <div id="left" class="col-sm-12 bg-light text-center text-dark ml-2 mb-2" style="height:300px; width:100%; display:inline-block;">
+                    <div id="left" class="col-sm-12 bg-light text-center text-dark ml-2" style="height:300px; width:100%; display:inline-block;">
                         <div>Story</div>
                     </div>
-                    <div id="left" class="col-sm-12 bg-light text-center text-dark ml-2 mb-2" style="height:150px; width:100%; display:inline-block;">
+                    <div id="left" class="col-sm-12 bg-light text-center text-dark ml-2" style="height:150px; width:100%; display:inline-block;">
                         <div>Inventory</div>
                     </div>
                 </div>
                 <div class="col-sm-8 row" style="display:inline-block; vertical-align:top;">
-                    <div class="col-sm-12 d-inline-block bg-light text-dark ml-2 mb-2" style="height:400px;">Puzzle</div>
-                    <div class="col-sm-12 bg-light text-dark ml-2 mb-2" style="height:150px;">
-                        <div class="col-sm-4 d-inline-block bg-light text-dark ml-2 mb-2">Questions</div>
-                        <div class="col-sm-4 d-inline-block bg-light text-dark ml-2 mb-2">Answers</div>
+                    <div class="col-sm-12 d-inline-block bg-light text-dark ml-2" style="height:400px;">Puzzle</div>
+                    <div class="col-sm-12 bg-light text-dark ml-2" style="height:150px;">
+                        <div class="col-sm-4 d-inline-block bg-light text-dark ml-2">Questions</div>
+                        <div class="col-sm-4 d-inline-block bg-light text-dark ml-2">Answers</div>
                     </div>
                 </div>
     </div>
-    
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
     <div class="scroll-to-top d-lg-none position-fixed">
         <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
