Spacing Mobile Optimized

--- a/Themes/mythical_labrynth_escape/templates/puzzle1.html
+++ b/Themes/mythical_labrynth_escape/templates/puzzle1.html
@@ -56,9 +56,9 @@
                 </div>
                 <div class="col-sm-8 row" style="display:inline-block; vertical-align:top;">
                     <div class="col-sm-12 d-inline-block bg-light text-dark ml-2" style="height:400px;">Puzzle</div>
-                    <div class="col-sm-12 bg-light text-dark ml-2" style="height:150px;">
-                        <div class="col-sm-4 d-inline-block bg-light text-dark ml-2">Questions</div>
-                        <div class="col-sm-4 d-inline-block bg-light text-dark ml-2">Answers</div>
+                    <div class="col-sm-12 bg-light text-dark ml-2">
+                        <div class="col-sm-4 d-inline-block bg-light text-dark ml-2" style="height:150px;">Questions</div>
+                        <div class="col-sm-4 d-inline-block bg-light text-dark ml-2" style="height:150px;">Answers</div>
                     </div>
                 </div>
     </div>
