--- a/Themes/mythical_labrynth_escape/templates/puzzle1.html
+++ b/Themes/mythical_labrynth_escape/templates/puzzle1.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav" style="background-color:black; opacity:60%;">
         <div class="container">
             <span class="navbar-brand js-scroll-trigger" href="#page-top">Enchanted Forest 1/3</span>
 
