Comments Added to HTML files

--- a/virtual_escape_room_app/templates/index.html
+++ b/virtual_escape_room_app/templates/index.html
@@ -61,6 +61,8 @@
                                 </div>
                             </div>
                         </li>
+                        
+                        <!-- Register Pop Up -->
                         <li class="nav-item mx-0 mx-lg-1">
                             <a id="register" class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" data-toggle="modal">Register</a>
                             <div id="registerModal" class="modal">
@@ -98,6 +100,8 @@
                                     </div>
                                 </div>
                         </li>
+
+                        <!-- Instructions Pop Up -->
                         <li class="nav-item mx-0 mx-lg-1">
                             <a id="instructions" class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" data-toggle="modal">Instructions</a>
                             <div id="instructionsModal" class="modal col-md-10">
@@ -115,6 +119,7 @@
                 </div>
             </div>
         </nav>
+
         <!-- Video-->
         <div class="video-background">
             <div class="video-wrap">
@@ -126,21 +131,14 @@
             </div>
         </div>
 
+        <!-- Middle Content -->
         <div class="caption text-center">
             <h1>Enchanted Forest</h1>
             <h3>Can you xscape it?</h3>
+            <!-- ***** Play Button should only show once the player successfully signs in ****-->
             <a class="btn btn-outline-light mx-1">Play</a>
         </div>
-        <!-- Masthead-->
-        <!-- <header class="masthead">
-            <div class="container d-flex h-100 align-items-center">
-                <div class="mx-auto text-center">
-                    <h1 class="mx-auto my-0 text-uppercase">Enchanted Forest</h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
-                    <a class="btn btn-primary js-scroll-trigger" href="#about">Play</a>
-                </div>
-            </div>
-        </header> -->
+
         <!-- Footer-->
         <footer class="footer text-center bg-transparent fixed-bottom">
                 <div class="row">
@@ -166,6 +164,7 @@
         <div class="scroll-to-top d-lg-none position-fixed">
             <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
         </div>
+        
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
