--- a/Themes/mythical_labrynth_escape/templates/puzzle1.html
+++ b/Themes/mythical_labrynth_escape/templates/puzzle1.html
@@ -20,17 +20,18 @@
 
 </head>
 <body>
-    <!-- Navigation-->
+    <!-- Title Nav Bar-->
     <nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav" style="background-color:black; opacity:60%;">
         <div class="container">
             <span class="navbar-brand js-scroll-trigger" href="#page-top">Enchanted Forest 1/3</span>
 
-                    <!-- Log In Pop Up -->
+                    <!-- Timer Placeholder -->
                     <li class="nav-item mx-0 mx-lg-1">
                         <a class="btn btn-outline-light mx-1">Timer</a>
                     </li>
         </div>
     </nav>
+
     <!-- Video-->
     <div class="video-background">
         <div class="video-wrap">
@@ -41,6 +42,7 @@
             </div>
         </div>
     </div>
+
     <!-- Middle Content-->
     <div class="caption text-center">
                 <div class="col-sm-3 row" style="display:inline-block;">
@@ -67,6 +69,19 @@
                     </div>
                 </div>
     </div>
+
+    <!-- Success Modal to only be shown after player completes the current puzzle.-->
+    <div id="successModal" class="modal col-md-10">
+        <div class="modal-content col-md-6">
+            <div class="modal-header text-center col-md-12">
+                <h4 class="modal-title w-100 font-weight-bold">Success!</h4>
+                <div type=button class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
     <div class="scroll-to-top d-lg-none position-fixed">
         <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
