--- a/themes/mythical_labyrinth_escape/templates/puzzle2.html
+++ b/themes/mythical_labyrinth_escape/templates/puzzle2.html
@@ -6,17 +6,18 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Virtual Xscape</title>
+    {% load static %}
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="{% static 'assets/img/favicon.ico' %}" />    <!-- Font Awesome icons (free version)-->
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
         <!-- Custom theme CSS (includes Bootstrap)-->
-    <link href="css/customstyles.css" rel="stylesheet" />
+    <link href="{% static 'css/customstyles.css' %}" rel="stylesheet" />
 
 </head>
 <body>
@@ -37,7 +38,7 @@
         <div class="video-wrap">
             <div id="video">
                 <video autoplay muted loop playsinline id="myVideo">
-                    <source src="video.mp4" type="video/mp4">
+                    <source src="{% static 'assets/vid/video.mp4' %}" type="video/mp4">
                 </video>
             </div>
         </div>
@@ -92,6 +93,6 @@
     <!-- Third party plugin JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
