--- a/virtual_escape_room_app/templates/landing.html
+++ b/virtual_escape_room_app/templates/landing.html
@@ -6,15 +6,16 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Virtual Xscape</title>
+        {% load static %}
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="{% static 'assets/img/favicon.ico' %}" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -125,7 +126,7 @@
             <div class="video-wrap">
                 <div id="video">
                     <video autoplay muted loop playsinline id="myVideo">
-                        <source src="video.mp4" type="video/mp4">
+                        <source src="{% static 'assets/vid/video.mp4' %}" type="video/mp4">
                     </video>
                 </div>
             </div>
@@ -171,6 +172,6 @@
         <!-- Third party plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="{% static 'js/scripts.js' %}"></script>
     </body>
 </html>
