--- a/themes/mythical_labyrinth_escape/templates/success_puzzle1.html
+++ b/themes/mythical_labyrinth_escape/templates/success_puzzle1.html
@@ -6,7 +6,12 @@
     <title>Answer {{puzzle.id}}</title>
 </head>
 <body>
-    <h2>You have successfully solved the puzzle! Click the link below to move on to the next level!</h2>
-    <a href="success_puzzle_1/{{puzzle.id}}">Attempt Puzzle Two</a>
+    <h3>As the last number slides into place, you hear a click and the padlock drops to the floor. The fairy bursts out of the cage with a triumphant laugh. “Silly witch!!” She giggled as she flew about the room. “She thinks capturing me will help her! Pah!!” You clear your throat to draw the tiny creature’s attention to you.</h3>
+    <h3>The fairy stops her celebration and comes to hover in front of you. “Right. Time to discharge my debt; since you freed me, I shall help free you!” In a flash of light, she flies to the only window in the room and squeezes out. A moment later you hear grunting and, what sounds like cursing, on the other side of the door, and the grind of metal against metal.</h3>
+    <h3>Finally, you hear a loud thunk and your heart jumps when you see the door crack open.</h3>
+    <h3>“Hurry, human!! We haven’t all day if you don’t want to be the main ingredient in her next spell!!”</h3>
+    <h3>As if you needed anymore encouragement to get out of here, you run to the door.</h3>
+    <h4>You have successfully solved the puzzle! Click the link below to move on to the next level!</h4>
+    <a href="/mythical_labyrinth_escape/puzzle/2">Attempt Puzzle Two</a>
 </body>
 </html>
