--- a/virtual_escape_room_app/templates/landing.html
+++ b/virtual_escape_room_app/templates/landing.html
@@ -33,7 +33,7 @@
                         <li class="nav-item mx-0 mx-lg-1">
                             <a id="login" class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" data-toggle="modal">Login</a>
                             <div id="loginModal" class="modal">
-                                <div class="modal-content col-md-6">
+                                <div class="modal-content col-6 mx-auto">
                                     <div class="modal-header text-center col-md-12">
                                         <h4 class="modal-title w-100 font-weight-bold">Player Log In</h4>
                                         <div type=button class="close" data-dismiss="modal" aria-label="Close">
@@ -42,22 +42,21 @@
                                     </div>
                                     <div class="modal-body col-md-12">
                                         <div class="md-form mb-5 col-md-12">
-                                            <i class="fas fa-envelope prefix grey-text"></i>
-                                            <input type="email" id="defaultForm-email" class="form-control validate">
-                                            <label data-error="wrong" data-success="right"
+                                            <form action="login" method="post">
+                                                {% csrf_token %}
+                                                <h4 class="modal-title w-100 font-weight-bold">Player Log In</h4>
+                                                <i class="fas fa-envelope prefix grey-text"></i>
+                                                <input type="email" id="defaultForm-email" class="form-control validate">
+                                                <label data-error="wrong" data-success="right"
                                                 for="defaultForm-email">Email</label>
-                                        </div>
 
-                                        <div class="md-form mb-4 col-md-12">
-                                            <i class="fas fa-lock prefix grey-text"></i>
-                                            <input type="password" id="defaultForm-pass" class="form-control validate">
-                                            <label data-error="wrong" data-success="right"
+                                                <i class="fas fa-lock prefix grey-text"></i>
+                                                <input type="password" id="defaultForm-pass" class="form-control validate">
+                                                <label data-error="wrong" data-success="right"
                                                 for="defaultForm-pass">Password</label>
+                                                <button class="bg-glow btn btn-default mt-5">Log In</button>
+                                            </form>
                                         </div>
-
-                                    </div>
-                                    <div class="modal-footer d-flex justify-content-center col-md-12">
-                                        <button class="bg-glow btn btn-default">Log In</button>
                                     </div>
                                 </div>
                             </div>
@@ -67,7 +66,7 @@
                         <li class="nav-item mx-0 mx-lg-1">
                             <a id="register" class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" data-toggle="modal">Register</a>
                             <div id="registerModal" class="modal">
-                                <div class="modal-content col-md-6">
+                                <div class="modal-content col-6 mx-auto">
                                     <div class="modal-header text-center col-md-12">
                                         <h4 class="modal-title w-100 font-weight-bold">Create a Player Profile</h4>
                                         <div type=button class="close" data-dismiss="modal" aria-label="Close">
@@ -75,29 +74,21 @@
                                         </div>
                                     </div>
                                     <div class="modal-body col-md-12">
-                                        <div class="md-form mb-5 col-md-12">
+                                        <form action="virtual_escape_room/register" method="post">
                                             <i class="fas fa-user prefix grey-text"></i>
                                             <input type="text" class="form-control validate">
                                             <label data-error="wrong" data-success="right"
                                                 for="orangeForm-name">Username</label>
-                                        </div>
-                                        <div class="md-form mb-5 col-md-12">
                                             <i class="fas fa-envelope prefix grey-text"></i>
                                             <input type="email" class="form-control validate">
                                             <label data-error="wrong" data-success="right"
                                                 for="orangeForm-email">Email</label>
-                                        </div>
-
-                                        <div class="md-form mb-4 col-md-12">
                                             <i class="fas fa-lock prefix grey-text"></i>
                                             <input type="password" class="form-control validate">
                                             <label data-error="wrong" data-success="right"
                                                 for="orangeForm-pass">Password</label>
-                                        </div>
-
-                                    </div>
-                                    <div class="modal-footer d-flex justify-content-center">
-                                        <button class="bg-glow btn btn-deep-orange">Register</button>
+                                            <button class="bg-glow btn btn-deep-orange">Register</button>
+                                        </form>
                                     </div>
                                 </div>
                         </li>
@@ -106,7 +97,7 @@
                         <li class="nav-item mx-0 mx-lg-1">
                             <a id="instructions" class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" data-toggle="modal">Instructions</a>
                             <div id="instructionsModal" class="modal col-md-10">
-                                <div class="modal-content col-md-6">
+                                <div class="modal-content col-6 mx-auto">
                                     <div class="modal-header text-center col-md-12">
                                         <h4 class="modal-title w-100 font-weight-bold">Instructions</h4>
                                         <div type=button class="close" data-dismiss="modal" aria-label="Close">
