--- a/Themes/mythical_labyrinth_escape/templates/success_puzzle3.html
+++ b/Themes/mythical_labyrinth_escape/templates/success_puzzle3.html
@@ -14,5 +14,6 @@
         <h3>You look in disbelief from the fairy to the witch and back.</h3>
         <h3>The fairy heaves a big sigh and pats you on the head. “Fret not, silly human. She won’t bother anybody ever again.” The tiny creature said with a terrifying smile. “Now run along before I decide to keep you, too – you’ve been quite entertaining.”</h3>
         <h3>The sound of the fairy’s giggles follow you as you run as fast as your feet can carry you through the rest of the forest.</h3>
+        <a href="/mythical_labyrinth_escape/results">View Results</a>
 </body>
 </html>
