--- a/themes/mythical_labyrinth_escape/templates/templatePuzzle2.html
+++ b/themes/mythical_labyrinth_escape/templates/templatePuzzle2.html
@@ -6,8 +6,8 @@
     <title>Pacman</title>
     <meta name="description" content="Lets play Pacman">
     {% load static %}
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-    <script defer src="{% static 'js_pacman.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'css/maze.css' %}">
+    <script defer src="{% static 'js/js_pacman.js' %}"></script>
 </head>
 <body>
     <div id="container">
@@ -32,30 +32,17 @@
         out of that maze before sundown.” Then she giggled, almost evilly. “You
         don’t want to be in there after dark!”
     </p>
-    <h1>Inventory</h1>
-    <p>icons to be hints for the puzzle question Maybe bee leaf fairy</p>
-    <h1>Puzzle 2 maze</h1>
 
     <h1>Puzzle Question</h1>
     <p>What is the magic word to open the gate?</p>
     <h1>Answer</h1>
-    <p>Believe in Fairies</p>
-    <h1>Success Story</h1>
-    <p>
-        You collapse to your knees as you stumble out of the maze, sounds of
-        rustling leaves and chittering creatures come from the shadows of the
-        bushes.
-        “Well, safe to say you made it out of there not a moment too soon!” The
-        fairy exclaimed as she floats around you, tsks and shakes her head at the
-        maze.
-        You look up, refusing to glance behind you even though you can feel
-        eyes on your back, and instead, look ahead across an open field of waist
-        high grass, the sun starting to touch the horizon as it sets.
-        Across the field, you spy a silvery gate and jump to your feet with joy –
-        the way out is just ahead!
-        “Well, well, almost there human! Better hurry before the sun sets!” The
-        fairy said, most amused.
-        You take off in a dead run.
-    </p>
+    <div>
+        <form action="2/answer" method="post">
+            {% csrf_token %}
+            <input type="text" name="answer">
+            <input type="submit" value="Submit">
+        </form>
+    </div>
+    
 </body>
 </html>
