made updates to puzzles and ensured proper routing

--- a/themes/mythical_labyrinth_escape/templates/puzzle1.html
+++ b/themes/mythical_labyrinth_escape/templates/puzzle1.html
@@ -66,7 +66,11 @@
                     </div>
                 </div>
                 <div class="col-sm-8 row" style="display:inline-block; vertical-align:top;">
-                    <div class="col-sm-12 d-inline-block bg-light text-dark ml-2" style="height:400px;">Puzzle One:</div>
+                    <div class="col-sm-12 d-inline-block bg-light text-dark ml-2" style="height:400px;">
+                        Puzzle One:
+                        <br>
+                        <img src="{% static '/images/note.png' %}" alt="Note">
+                    </div>
                     <div class="col-sm-12 bg-light text-dark ml-2">
                         <div class="col-sm-4 d-inline-block bg-light text-dark ml-2" style="height:150px;">{{puzzle.question}}</div>
                         <div class="col-sm-4 d-inline-block bg-light text-dark ml-2" style="height:150px;">
